
WIP      [MANUALS] When displaying manuals use cached extracted images if they exist.

WIP      [MANUALS] Progress bar when extracting PDF pages.

WIP      [MANUALS] Support for CBZ/CBR manuals.
         Wait until this is implemented in AEL and then port it from AEL into AML?

[B]Advanced Emulator Launcher | version 0.9.7 | xx June 2018[/B]

FEATURE  [CORE] Optimize the rendering of ROMs in 3 steps: a) Loading, b) Processing and c) Rendering.
         Processing computes all data to render ROMs and Rendering calls Kodi functions. This will
         allow to measure how long does it take to call the Kodi functions for ListItem generation.


FEATURE  Reduce the memory consumption during the database generation.
         By default use the options OPTION_COMPACT_JSON = True and OPTION_LOWMEM_WRITE_JSON = True
         See https://stackoverflow.com/questions/24239613/memoryerror-using-json-dumps

FIX      Fix crash when executing "Check/Update all object" if Favourites are empty.


[B]Advanced Emulator Launcher | version 0.9.6 | 25 May 2018[/B]

FEATURE  Improve the user experience when the addon is just installed. Check if databases
         have been built, check for errors, etc.

FEATURE  Add a isMature field to MAME DB. Take the mature information from mature.ini included
         in the Catver.ini ZIP file.

FEATURE  Option in settings to completely hide Mature machines and filter categories.

FEATURE  Asset hashed database. This will speed up launching MAME machines. Note that the asset
         DB must be opened for the Most Played and Recently Played DBs.

FEATURE  Prettify the "Display rotation" filter (use Horizontal/Vertical instead of numbers).

FEATURE  Include number of buttons in controls and some other control information.

FEATURE  Add the Samples of each machine to the ROM database.

FEATURE  Audit the ROM samples inside ZIP files.

FEATURE  Implement "Most played MAME machines"

FEATURE  Implement "Recently played MAME machines"
