@@ -24,10 +24,11 @@ WIP      [MANUALS] Support for CBZ/CBR manuals.
 
 [B]Advanced Emulator Launcher | version 0.9.7 | xx June 2018[/B]
 
+FEATURE  Render the `In Favourites` flag for MAME machines.
+
 FEATURE  [CORE] Optimize the rendering of ROMs in 3 steps: a) Loading, b) Processing and c) Rendering.
          Processing computes all data to render ROMs and Rendering calls Kodi functions. This will
          allow to measure how long does it take to call the Kodi functions for ListItem generation.
-
 
 FEATURE  Reduce the memory consumption during the database generation.
          By default use the options OPTION_COMPACT_JSON = True and OPTION_LOWMEM_WRITE_JSON = True
